--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -8,10 +8,11 @@ form, input, div {
 }
 li {
   list-style: none;
+  margin-top: 5px;
 }
 a {
     text-decoration: none;
-    color: white;
+    color: #FFD700;
     font-family: 'Hiragino Maru Gothic ProN';
 }
 
@@ -19,58 +20,81 @@ a {
 /* ここまで*/
 
 .wrapper {
-    height: 100vh;
+    height: 100%;
     width: 100%;
+    background-color: #708090;
+    padding-top: 50px;
 }
 
 .navbar-header {
-    box-shadow: 0 2px 0 0 whitesmoke;
-    padding: 15px 15px;
+    box-shadow: 0 2px 0 0 gray;
+    padding: 5px 15px;
     font-family: arial narrow;
-    background-color: white;
-    
+    background-color:#d3d3d3;
+    position: fixed;
+    width: 100%;
+    display: flex;
+}
+
+.portfolio {
+    font-size: 20px;
+    font-family: arial narrow;
+    font-weight: bold;
+}
+
+.links {
+    font-size: 10px;
+    width: 400px;
+    display: flex;
+    justify-content: space-around;
+    text-shadow: 1px 1px 1px #555, -1px 1px 1px #555, 1px -1px 1px #555, -1px -1px 1px #555, 1px 1px 1px #555, -1px 1px 1px #555, 1px -1px 1px #555, -1px -1px 1px #555;
 }
 
 .header {
     height: 50px;
-    font-size: 30px;
+    font-size: 60px;
     font-weight: bold;
-    /* padding-left: 30px; */
     margin-top: 30px;
     text-align: center;
     font-family: arial narrow;
+    color: #F5F5DC;
 
 }
 
-li {
-    margin-top: 5px;
-}
+
+
 .main1 {
+    padding: 120px 30px;
+    font-family: arial narrow;
+    text-align: center;
+    color: #F5F5DC;
+}
+
+.main2 {
     padding: 30px 30px;
     font-family: arial narrow;
     text-align: center;
+    color: #F5F5DC;
 }
 
-
-
-.main2 {
+.main3 {
     margin-top: 20px;
     text-align: center;
+    justify-content: center;
+    display: flex;
 }
 
-.main2__aboutme {
+.main3__aboutme {
     height: calc(100% - 30px);
-    width:  calc(60% - 30px);
-    background-color:blue;
+    width:  200px;
     display: inline-block;
     border-radius: 30px;
     font-size:20px;
 }
 
-.main2__challenge {
+.main3__challenge {
     height: calc(100% - 30px);
-    width:  calc(60% - 30px);
-    background-color: red;
+    width:  200px;
     display:inline-block;
     border-radius: 30px;
     font-size:20px;
@@ -80,10 +104,3 @@ li {
     text-align: center;
     margin-top: 130px;
   }
-
-/* a {
-    display:block;
-    width:100%;
-    height:100%;
-    text-decoration: none;
-} */
