--- a/src/main/resources/templates/aboutme.html
+++ b/src/main/resources/templates/aboutme.html
@@ -6,16 +6,25 @@
 <link href="/css/aboutme.css" th:href="@{/css/aboutme.css}" rel="stylesheet"></link>
 </head>
 <body>
+    <div class="navbar-header">
+        <div class="portfolio">About Me</div>
+        <ul class="links">
+            <li class="link__aboutme"><a href="/aboutme" id="a-aboutme">About Me<br></a></li>
+            <li class="link__challenge"><a href="/challenge" id="a-challenge">Challenge</a></li>
+        </ul>
+    </div>
     <div class="wrapper">
-        <div class="navbar-header">About me</div>
         <div class="header">About me</div>
         <div class ="main">
             <ul class="main1">
                 <li class="main1__greeting">ご覧いただきありがとうございます。</li>
                 <li class="main1__eng">未経験からエンジニアを目指しております。転職活動の為、作成致しました。何卒宜しく御願いたします。</li>
+                <li class="main1__greeting">ご覧いただきありがとうございます。</li>
+                <li class="main1__eng">未経験からエンジニアを目指しております。転職活動の為、作成致しました。何卒宜しく御願いたします。</li>
+                <li class="main1__eng">未経験からエンジニアを目指しております。転職活動の為、作成致しました。何卒宜しく御願いたします。</li>
             </ul>
             <ul class="main2">
-                <li class="main2__index"><a href="/" id="a-index">トップ画面へ<br></a></li>
+                <li class="main2__index"><a href="/" id="a-index">Home<br></a></li>
                 <li class="main2__challenge"><a href="/challenge" id="a-challenge">Challenge</a></li>
             </ul>
         </div>
