--- a/src/main/resources/templates/challenge.html
+++ b/src/main/resources/templates/challenge.html
@@ -6,17 +6,35 @@
 <link href="/css/challenge.css" th:href="@{/css/challenge.css}" rel="stylesheet"></link>
 </head>
 <body>
+    <div class="navbar-header">
+        <div class="portfolio">Challenge</div>
+        <div class="links">
+            <li class="link__aboutme"><a href="/aboutme" id="a-aboutme">About Me<br></a></li>
+            <li class="link__challenge"><a href="/challenge" id="a-challenge">Challenge</a></li>
+        </div>
+    </div>
     <div class="wrapper">
-        <div class="navbar-header">Masashi Yoshida's Portfolio</div>
-        <div class="header">Masashi Yoshida's Portfolio</div>
+        <div class="header">Challenge</div>
         <div class ="main">
+            <div class="introduce">学習のまとめとなります。ご覧頂けますと幸いです。</div>
             <ul class="main1">
-                <li class="main1__greeting">ご覧いただきありがとうございます。</li>
-                <li class="main1__eng">未経験からエンジニアを目指しております。転職活動の為、作成致しました。何卒宜しく御願いたします。</li>
+                <li class="name">Chat - Space</li>
+                <li class="explain">チャットアプリです。<br>TECH::EXPERT在学中に作成いたしました。</li>
+                <a href="http://www.netyasun.com/home/color.html">ご覧ください！</a>
             </ul>
             <ul class="main2">
-                <li class="main2__index"><a href="/" id="a-index">トップ画面へ<br></a></li>
-                <li class="main2__aboutme"><a href="/aboutme" id="a-aboutme">About Me<br></a></li>
+                <li class="name">Output at Qiita</li>
+                <li class="explain">Qiitaを用いて、学習した内容をアウトプットしております。<br>raigakun(ペットの名前です）というIDで投稿しております。</li>
+                <a href="https://qiita.com/raigakun">ご覧ください！</a>
+            </ul>
+            <ul class="main3">
+                <li class="name">Coming Soon</li>
+                <li class="explain">がんばって作成中です！がんばります！</li>
+                <a href="http://www.netyasun.com/home/color.html">少々お待ちください！</a>
+            </ul>
+            <ul class="main4">
+                <li class="main4__index"><a href="/" id="a-index">Home<br></a></li>
+                <li class="main4__aboutme"><a href="/aboutme" id="a-aboutme">About Me<br></a></li>
             </ul>
         </div>
         <div class="footer">
