--- a/src/main/resources/static/css/challenge.css
+++ b/src/main/resources/static/css/challenge.css
@@ -1,4 +1,3 @@
-/* ここまで*/
 /* CSSのリセット（消さないでください） */
 html, body,
 ul, ol, li,
@@ -9,105 +8,74 @@ form, input, div {
 }
 li {
   list-style: none;
-  margin-top: 5px;
 }
 a {
     text-decoration: none;
+    color: white;
     font-family: 'Hiragino Maru Gothic ProN';
-    color: #FFD700;
 }
 
-
 /* ここまで*/
-
 .wrapper {
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    background-color: #708090;
-    padding-top: 50px;
 }
 
 .navbar-header {
-    box-shadow: 0 2px 0 0 gray;
-    padding: 5px 15px;
+    box-shadow: 0 2px 0 0 whitesmoke;
+    padding: 15px 15px;
     font-family: arial narrow;
-    background-color:#d3d3d3;
-    position: fixed;
-    width: 100%;
-    display: flex;
-}
-
-.portfolio {
-    font-size: 20px;
-    font-family: arial narrow;
-    font-weight: bold;
-}
-
-.links {
-    font-size: 10px;
-    width: 400px;
-    display: flex;
-    justify-content: space-around;
-    text-shadow: 1px 1px 1px #555, -1px 1px 1px #555, 1px -1px 1px #555, -1px -1px 1px #555, 1px 1px 1px #555, -1px 1px 1px #555, 1px -1px 1px #555, -1px -1px 1px #555;
+    background-color: white;
+    
 }
 
 .header {
     height: 50px;
-    font-size: 100px;
+    font-size: 30px;
     font-weight: bold;
+    /* padding-left: 30px; */
+    margin-top: 30px;
+    text-align: center;
     font-family: arial narrow;
-    color: #F5F5DC;
 
 }
 
-.main {
-    padding: 120px 100px;
-    margin: 30px 30px;
+li {
+    margin-top: 5px;
+}
+.main1 {
+    padding: 30px 30px;
     font-family: arial narrow;
     text-align: center;
-    color: #F5F5DC;
-}
-
-.introduce {
-    font-size: 20px;
-}
-
-.name {
-    font-size: 50px;
-    padding-bottom: 5px;
 }
 
 
 
-
-.main4 {
-    margin-top: 100px;
+.main2 {
+    margin-top: 20px;
     text-align: center;
-    justify-content: center;
-    display:flex;
 }
 
-.main4__index {
+.main2__index {
     height: calc(100% - 30px);
-    width:  200px;
+    width:  calc(60% - 30px);
+    background-color: orange;
     display: inline-block;
     border-radius: 30px;
     font-size:20px;
 }
 
-.main4__aboutme {
+.main2__aboutme {
     height: calc(100% - 30px);
-    width:  200px;
+    width:  calc(60% - 30px);
+    background-color:blue;
     display:inline-block;
     border-radius: 30px;
     font-size:20px;
 }
 
 .footer {
-  text-align: center;
-  margin-top: 130px;
-}
+    text-align: center;
+    margin-top: 130px;
+  }
 
-ul {
-    margin-top: 80px;
-}
