--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -8,11 +8,10 @@ form, input, div {
 }
 li {
   list-style: none;
-  margin-top: 5px;
 }
 a {
     text-decoration: none;
-    color: #FFD700;
+    color: white;
     font-family: 'Hiragino Maru Gothic ProN';
 }
 
@@ -20,81 +19,58 @@ a {
 /* ここまで*/
 
 .wrapper {
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    background-color: #708090;
-    padding-top: 50px;
 }
 
 .navbar-header {
-    box-shadow: 0 2px 0 0 gray;
-    padding: 5px 15px;
+    box-shadow: 0 2px 0 0 whitesmoke;
+    padding: 15px 15px;
     font-family: arial narrow;
-    background-color:#d3d3d3;
-    position: fixed;
-    width: 100%;
-    display: flex;
-}
-
-.portfolio {
-    font-size: 20px;
-    font-family: arial narrow;
-    font-weight: bold;
-}
-
-.links {
-    font-size: 10px;
-    width: 400px;
-    display: flex;
-    justify-content: space-around;
-    text-shadow: 1px 1px 1px #555, -1px 1px 1px #555, 1px -1px 1px #555, -1px -1px 1px #555, 1px 1px 1px #555, -1px 1px 1px #555, 1px -1px 1px #555, -1px -1px 1px #555;
+    background-color: white;
+    
 }
 
 .header {
     height: 50px;
-    font-size: 60px;
+    font-size: 30px;
     font-weight: bold;
+    /* padding-left: 30px; */
     margin-top: 30px;
     text-align: center;
     font-family: arial narrow;
-    color: #F5F5DC;
 
 }
 
-
-
+li {
+    margin-top: 5px;
+}
 .main1 {
-    padding: 120px 30px;
-    font-family: arial narrow;
-    text-align: center;
-    color: #F5F5DC;
-}
-
-.main2 {
     padding: 30px 30px;
     font-family: arial narrow;
     text-align: center;
-    color: #F5F5DC;
 }
 
-.main3 {
+
+
+.main2 {
     margin-top: 20px;
     text-align: center;
-    justify-content: center;
-    display: flex;
 }
 
-.main3__aboutme {
+.main2__aboutme {
     height: calc(100% - 30px);
-    width:  200px;
+    width:  calc(60% - 30px);
+    background-color:blue;
     display: inline-block;
     border-radius: 30px;
     font-size:20px;
 }
 
-.main3__challenge {
+.main2__challenge {
     height: calc(100% - 30px);
-    width:  200px;
+    width:  calc(60% - 30px);
+    background-color: red;
     display:inline-block;
     border-radius: 30px;
     font-size:20px;
@@ -104,3 +80,10 @@ a {
     text-align: center;
     margin-top: 130px;
   }
+
+/* a {
+    display:block;
+    width:100%;
+    height:100%;
+    text-decoration: none;
+} */
