リンク先合わせ

--- a/src/main/resources/templates/challenge.html
+++ b/src/main/resources/templates/challenge.html
@@ -9,8 +9,8 @@
     <div class="navbar-header">
         <div class="portfolio">Challenge</div>
         <div class="links">
-            <li class="link__aboutme"><a href="/aboutme" id="a-aboutme">About Me<br></a></li>
-            <li class="link__challenge"><a href="/challenge" id="a-challenge">Challenge</a></li>
+            <li class="link__home"><a href="/" id="a-index">Home<br></a></li>
+            <li class="link__aboutme"><a href="/aboutme" id="a-aboutme">About me</a></li>
         </div>
     </div>
     <div class="wrapper">
