--- a/src/main/resources/templates/aboutme.html
+++ b/src/main/resources/templates/aboutme.html
@@ -9,7 +9,7 @@
     <div class="navbar-header">
         <div class="portfolio">About Me</div>
         <ul class="links">
-            <li class="link__aboutme"><a href="/aboutme" id="a-aboutme">About Me<br></a></li>
+            <li class="link__home"><a href="/" id="a-index">Home<br></a></li>
             <li class="link__challenge"><a href="/challenge" id="a-challenge">Challenge</a></li>
         </ul>
     </div>
